ajout des classes techniques pour gerer JWT